# riapyx

./: Cargo.toml  Readme.md  cga_font.txt
cpu_test/: Makefile  cpu_test.s  gen_asciinums.py  gen_flags.py  print.inc  str_testing.inc  testing.inc
src/: bios.rs  color_print.rs  machine.rs  main.rs  mem.rs
src/cpu/: base.rs  debug.rs  exec.rs  instruction.rs  instruction_exec.rs  io_dispatch.rs  ireg_access.rs  mem_access.rs  mod.rs  operand_access.rs  parser.rs  parser_tests.rs  reg_access.rs
src/hw/: display.rs  keyboard.rs  mod.rs  mouse.rs  scancodes.rs  serial.rs  storage.rs
