[package]
name = "riapyx"
version = "0.1.0"
authors = ["ynben <ynben0@gmail.com>"]
debug = true

[features]
display_log = []
mouse_log = []
cpu_log = []
serial_log = []
bios_log = []
storage_log = []
machine_log = []
keyboard_log = []
vram-check = []
cpu-trace = []
vram-dirty = []
bda-tracking = []

[dependencies]
ansi_term = "0.7.0"
sdl2 = "0.13.0"
num = "0.1.29"
time = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"

[[bin]]
name = "riapyx"
